--- a/leetcode/pom.xml
+++ b/leetcode/pom.xml
@@ -10,5 +10,23 @@
   		<version>4.12</version>
   		<scope>test</scope>
   	</dependency>
+  	<dependency>
+  		<groupId>org.spockframework</groupId>
+  		<artifactId>spock-core</artifactId>
+  		<version>1.0-groovy-2.3</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>cglib</groupId>
+  		<artifactId>cglib-nodep</artifactId>
+  		<version>3.1</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.objenesis</groupId>
+  		<artifactId>objenesis</artifactId>
+  		<version>2.1</version>
+  		<scope>test</scope>
+  	</dependency>
   </dependencies>
 </project>
